day-1/security.tf
resource "aws_security_group" "ec2-sg" {
    provider=aws.mumbai
    name="ec2-sg"
    description="allow http and ssh traffic only"

ingress {
    from_port=22
    to_port=22
    protocol="tcp"
    cidr_blocks=["0.0.0.0/0"]
}

ingress {
    from_port=80
    to_port=80
    protocol="tcp"
    cidr_blocks=["0.0.0.0/0"]
}

egress {
    from_port=0
    to_port=0
    protocol="-1"
    cidr_blocks=["0.0.0.0/0"]
}

}
